Thu Jan  9 19:12:37 2014  Koichi Sasada  <ko1@atdot.net>

	* vm.c (rb_vm_pop_cfunc_frame): added.  It cares c_return event.
	  The patch base by drkaes (Stefan Kaes).
	  [Bug #9321]

	* variable.c (rb_mod_const_missing): use rb_vm_pop_cfunc_frame()
	  instead of rb_frame_pop().

	* vm_eval.c (raise_method_missing): ditto.

	* vm_eval.c (rb_iterate): ditto.

	* internal.h (rb_vm_pop_cfunc_frame): add decl.

	* test/ruby/test_settracefunc.rb: add tests.
	  provided by drkaes (Stefan Kaes).

	* vm.c, eval.c, include/ruby/intern.h (rb_frame_pop):
	  move definition of rb_frame_pop() and deprecate it.
	  It doesn't care about `return' events.

Thu Jan  9 17:40:28 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* hash.c (rb_any_hash): should treat the return value of rb_objid_hash()
	  as `long', because ruby assumes the object id of an object is `long'.
	  this fixes test failures on mswin64 introduced at r44525.

Thu Jan  9 09:55:20 2014  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/yaml_tree.rb: dumping strings with
	  quotes should not have changed.  [ruby-core:59316] [Bug #9300]

	* ext/psych/lib/psych.rb: fixed missing require.

	* test/psych/test_string.rb: test

Thu Jan  9 09:51:00 2014  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/to_ruby.rb: anonymous structs
	  should be able to roundtrip.  Thanks @splattael!

	* test/psych/test_object_references.rb: test for change

Wed Jan  8 22:53:16 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_insnhelper.c (vm_search_super_method): when super called in a
	  bound UnboundMethod generated from a module, no superclass is
	  found since the current defined class is the module, then call
	  method_missing in that case.  [ruby-core:59619] [Bug #9377]

Wed Jan  8 15:55:21 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (rb_objid_hash): return hash value from object ID with a
	  salt, extract from rb_any_hash().
