@@ -1,3 +1,9 @@
+Thu Jan  9 20:31:10 2014  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* hash.c (rb_objid_hash): should return `long'.  brushup r44534.
+
+	* object.c (rb_obj_hash): follow above change.
+
 Thu Jan  9 19:12:37 2014  Koichi Sasada  <ko1@atdot.net>
 
 	* vm.c (rb_vm_pop_cfunc_frame): added.  It cares c_return event.
@@ -23,7 +29,8 @@ Thu Jan  9 19:12:37 2014  Koichi Sasada  <ko1@atdot.net>
 Thu Jan  9 17:40:28 2014  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* hash.c (rb_any_hash): should treat the return value of rb_objid_hash()
-	  as `long', because ruby assumes the object id of an object is `long'.
+	  as `long', because ruby assumes the hash value of the object id of
+	  an object is `long'.
 	  this fixes test failures on mswin64 introduced at r44525.
 
 Thu Jan  9 09:55:20 2014  Aaron Patterson <aaron@tenderlovemaking.com>
